--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -53,6 +53,52 @@ application.argo.applicationset = This is a group of Argo applications generated
 application.type.acm = ACM application
 application.type.argo = Argo app set
 
+argo.create.title = Create Argo app set
+argo.basic.info = General
+argo.cluster.decision.resource.name = Placement resource
+argo.cluster.decision.resource.name.tooltip = Cluster decision resource name
+argo.cluster.decision.resource.placeholder = Enter or select a placement name
+argo.cluster.decision.requeue.title = Requeue time
+argo.cluster.decision.requeue.title.tooltip = Cluster decision resource requeue time in seconds
+argo.server.name = Argo server
+argo.server.placeholder = Select the correct Argo server
+argo.cluster.tooltip = Argo server to deploy Argo app set
+argo.create.name = App set name
+argo.create.placeholder = Enter app set name
+argo.destination.name = Name
+argo.destination.namespace = Remote namespace
+argo.destination.name.placeholder = Enter or select a destination name
+argo.destination.namespace.placeholder = Enter destination namespace
+argo.destination.name.tooltip = Destination name
+argo.destination.namespace.tooltip = Destination namespace
+argo.destination.server = Server
+argo.destination.server.placeholder = Enter or select a destination server
+argo.destination.server.tooltip = Destination server
+argo.git.target.revision = Revision
+argo.git.target.revision.tooltip = Refer to a single commit
+argo.git.target.revision.placeholder = Enter or select a tracking revision
+argo.git.revision.type.placeholder = Enter or select a revision type
+argo.git.revision.type.title = Revision type
+argo.git.revision.type.tooltip = The revision type on the Git repository.
+argo.destination.type = Type
+argo.destination.type.placeholder = Select destination type
+argo.set.name.tooltip = Argo app set name
+argo.sync.policy.subtitle = Settings used to configure application syncing when there are differences between the desired state and the live cluster state.
+argo.sync.policy.title = Sync policy
+argo.sync.policy.allow.empty = Allow applications to have empty resources
+argo.sync.policy.apply.out.of.sync.only = Only synchronize out-of-sync resources
+argo.sync.policy.create.namespace = Automatically create namespace if it does not exist
+argo.sync.policy.prune = Delete resources that are no longer defined in Git
+argo.sync.policy.prune.last = Delete resources that are no longer defined in Git at the end of a sync operation
+argo.sync.policy.prune.propagation.policy = Prune propagation policy
+argo.sync.policy.prune.propagation.policy.title = Propagation policy
+argo.sync.policy.replace = Replace resources instead of applying changes from Git
+argo.sync.policy.self.heal = Automatically sync when cluster state changes
+argo.sync.policy.validate = Disable kubectl validation
+argo.placement.title = Placement
+argo.template.title = Template
+argo.template.source.title = Source
+argo.template.destination.title = Destination
 button.cancel = Cancel
 button.copyButton.feedback = Copied to clipboard
 button.create = Save
@@ -94,6 +140,10 @@ combo.subscription.all = All Subscriptions
 combo.subscription.choose = All subscriptions
 
 common.app.name = Red Hat Advanced Cluster Management for Kubernetes
+
+common.next = Next
+common.back = Back
+common.cancel = Cancel
 
 creation.app.add.channel = Add another repository
 creation.app.ansible.secret.host=Ansible Tower host
