--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -216,6 +216,7 @@ creation.app.settings.timeWindow.config.timezone.endTime = End Time
 creation.app.settings.timeWindow.defaultMode = Always active
 creation.app.settings.timeWindow.tooltip=Define a time window if you want to activate or block resources deployment within a certain time interval. 
 creation.app.yaml = Application YAML
+creation.argo.yaml = ApplicationSet YAML
 creation.enter.value=Enter {0}
 creation.invalid.url = Value must be a valid URL format.
 creation.loading.values=Loading {0}...
