fix exception error
Signed-off-by: Maggie Chen <magchen@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -99,6 +99,7 @@ argo.placement.title = Placement
 argo.template.title = Template
 argo.template.source.title = Source
 argo.template.destination.title = Destination
+argo.placement.exception = does not exist in this environment. Choose another rule or create a new one.
 button.cancel = Cancel
 button.copyButton.feedback = Copied to clipboard
 button.create = Save
