--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -99,7 +99,7 @@ argo.placement.title = Placement
 argo.template.title = Template
 argo.template.source.title = Source
 argo.template.destination.title = Destination
-argo.placement.exception = does not exist in this environment. Choose another rule or create a new one.
+argo.placement.exception = Placement {0} does not exist in this environment. Choose another rule or create a new one.
 button.cancel = Cancel
 button.copyButton.feedback = Copied to clipboard
 button.create = Save
