add exception if there's no clusterset binding
Signed-off-by: Maggie Chen <magchen@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -62,6 +62,8 @@ argo.cluster.decision.requeue.title = Requeue time
 argo.cluster.decision.requeue.title.tooltip = Cluster decision resource requeue time in seconds
 argo.server.name = Argo server
 argo.server.placeholder = Select the correct Argo server
+argo.server.exception = Failed to load the Argo server. Make sure the Argo server is installed and the GitOpsCluster resouce is created successfully.
+argo.server.selection.exception = There is no clusterSet bound to the selected Argo namespace. Click the Add cluster sets tab to bind one or more clustersets.
 argo.cluster.tooltip = Argo server to deploy Argo app set
 argo.create.name = App set name
 argo.create.placeholder = Enter app set name
@@ -232,6 +234,7 @@ creation.missing.timeWindow.timezone = Select a timezone to create a time window
 creation.missing.timeWindow.timelist = Select start time and end time to create a time window.
 creation.must.select.resource.type = Must select resource type
 creation.ocp.cloud.add.connection = Add credentials
+creation.ocp.cloud.add.clustersets = Add cluster sets
 creation.ocp.cluster.enter.value = Enter {0}
 creation.ocp.toggle=Application settings
 creation.valid.alphanumeric = Value must be alphanumeric.
