Add row actions for appsets
Signed-off-by: Feng Xiang <fxiang@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -312,6 +312,8 @@ modal.remove.submit = Delete
 modal.errors.querying.resource = An unexpected error occurred while retrieving the requested resource. This resource might no longer exist.
 modal.remove-queryapplications.heading = Permanently delete {0} application?
 modal.remove-queryapplications.label = Application
+modal.remove-queryapplicationset.heading = Permanently delete {0} applicationset?
+modal.remove-queryapplicationset.label = ApplicationSet
 modal.remove-querychannels.heading = Permanently delete {0} channel?
 modal.remove-querychannels.label = Channel
 modal.remove-queryplacementrules.heading = Permanently delete {0} placement rule?
@@ -323,6 +325,9 @@ modal.remove.application.resources = Remove application related resources
 modal.remove.application.shared.resources = This application uses the following shared resources, which are not removable:
 modal.remove.application.child.resources =  This subscription deploys the following resources, which will be removed:
 modal.remove.application.sibling.resources = Shared with:
+modal.remove.applicationset.resources = Remove applicationset related resources
+modal.remove.applicationset.confirm = The following Argo application(s) deployed by the applicationset will also be deleted:
+modal.remove.applicationset.shared.resources = This applicationset uses placement "{0}", which is not removable. This placement is shared by the following applicationset(s):
 modal.remove.confirm = Are you sure that you want to continue?
 modal.sync-queryapplications.heading = Sync application
 modal.sync-queryapplications.label = Application
