--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -655,7 +655,7 @@ table.header.subscriptions.timeWindow.tooltip = Indicates if updates to the subs
 table.header.timeWindow = Time window
 table.header.type = Type
 table.header.type.subscription = Subscription
-table.header.type.argo = Argo
+table.header.type.argo = Argo CD
 table.header.type.appset = Application set
 table.header.type.subscription.popup.label = Subscriptions
 table.plural.application = applications
@@ -665,7 +665,7 @@ table.plural.channel = channels
 table.search.labelText = Filter table
 table.filter.type.acm.application.label = Applications with
 table.filter.type.acm.application = Subscription
-table.filter.type.argo.application = Argo
+table.filter.type.argo.application = Argo CD
 table.filter.type.acm.application.value = app.k8s.io/v1beta1
 table.filter.type.argo.application.value = argoproj.io/v1alpha1
 
