--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -53,7 +53,7 @@ application.argo.applicationset = This is a group of Argo CD applications genera
 application.type.acm = Subscription
 application.type.argo = Application set
 
-argo.create.title = Create Argo app set
+argo.create.title = Create Argo CD ApplicationSet
 argo.basic.info = General
 argo.cluster.decision.resource.name = Placement resource
 argo.cluster.decision.resource.name.tooltip = Cluster decision resource name
@@ -65,8 +65,8 @@ argo.server.placeholder = Select the correct Argo server
 argo.server.exception = Failed to load the Argo server. Make sure the Argo server is installed and the GitOpsCluster resouce is created successfully.
 argo.server.selection.exception = There is no clusterSet bound to the selected Argo namespace. Click the Add cluster sets tab to bind one or more clustersets.
 argo.cluster.tooltip = Argo server to deploy Argo app set. Click the Add cluster sets tab to create a new cluster set.
-argo.create.name = App set name
-argo.create.placeholder = Enter app set name
+argo.create.name = Argo CD ApplicationSet name
+argo.create.placeholder = Enter the application set name
 argo.destination.name = Name
 argo.destination.namespace = Remote namespace
 argo.destination.name.placeholder = Enter or select a destination name
@@ -198,7 +198,8 @@ creation.app.objectstore.secret = Secret name
 creation.app.placement.rule = Select clusters to deploy to
 creation.app.section.prePost=Configure automation for prehook and posthook
 creation.app.section.settings = Settings: Specify application behavior
-creation.app.section.techPreview=Tech preview
+creation.app.section.techPreview=Technology Preview
+creation.app.section.techPreview.color=orange
 creation.app.settings.existingRule = Select an existing placement configuration
 select.existing.placement.rule = Select existing placement rule
 creation.app.settings.localClusters = Deploy on local cluster
