--- a/tests/cypress/config/users.yaml
+++ b/tests/cypress/config/users.yaml
@@ -3,36 +3,36 @@ users:
   # Users are based on the roles defined in RBAC Test specification
   # Mapping is userRole: username
 
-  cluster-admin-app: test-cluster-admin
+  cluster-admin-app: app-test-cluster-admin
   #cluster-admin / cluster-wide
 
-  cluster-manager-admin: test-cluster-manager-admin
+  cluster-manager-admin: app-test-cluster-manager-admin
   # open-cluster-management:cluster-manager-admin / cluster-wide
   # As superuser in RHACM lke default cluster-admin         
   
-  admin-managed-cluster: test-mngd-cluster-admin
+  admin-managed-cluster: app-test-mngd-cluster-admin
   # open-cluster-management:admin:managed-cluster-1  / cluster-wide
   #admin / namespace
 
-  edit-managed-cluster: test-mngd-cluster-edit
+  edit-managed-cluster: app-test-mngd-cluster-edit
   # open-cluster-management:view:managed-cluster-1 / cluster-wide
   # edit / namespace
 
-  view-managed-cluster: test-mngd-cluster-view
+  view-managed-cluster: app-test-mngd-cluster-view
   # open-cluster-management:view:managed-cluster-1 / cluster-wide
   # view / namespace
   # Binded to the managed-cluster-1 and its namspace
 
-  subscription-admin: test-subscription-admin
+  subscription-admin: app-test-subscription-admin
   # open-cluster-management:subscription-admin / cluster-wide
 
-  admin: test-admin
+  admin: app-test-admin
   # admin / namespace namespace where the resources are in
 
-  edit: test-edit
+  edit: app-test-edit
   # edit / namespace namespace where the resources are in
 
-  view: test-view
+  view: app-test-view
   # view / namespace namespace where the resources are in
 
 superadmin: kubeadmin
