--- a/tests/cypress/templates/rbac_yaml/e2e-rbac-clusterrolebinding.yaml
+++ b/tests/cypress/templates/rbac_yaml/e2e-rbac-clusterrolebinding.yaml
@@ -1,10 +1,10 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: test-cluster-manager-admin-clusterrolebinding
+  name: app-test-cluster-manager-admin-clusterrolebinding
 subjects:
 - kind: User
-  name: test-cluster-manager-admin
+  name: app-test-cluster-manager-admin
 roleRef:
   kind: ClusterRole
   name: open-cluster-management:cluster-manager-admin
@@ -13,10 +13,10 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: test-cluster-admin-clusterrolebinding
+  name: app-test-cluster-admin-clusterrolebinding
 subjects:
 - kind: User
-  name: test-cluster-admin
+  name: app-test-cluster-admin
 roleRef:
   kind: ClusterRole
   name: admin
@@ -25,11 +25,11 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: test-edit-clusterrolebinding
+  name: app-test-edit-clusterrolebinding
   namespace: default
 subjects:
 - kind: User
-  name: test-edit
+  name: app-test-edit
 roleRef:
   kind: Role
   name: edit
@@ -38,11 +38,11 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: test-admin-clusterrolebinding
+  name: app-test-admin-clusterrolebinding
   namespace: default
 subjects:
 - kind: User
-  name: test-admin
+  name: app-test-admin
 roleRef:
   kind: Role
   name: admin
@@ -51,11 +51,11 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: test-view-clusterrolebinding
+  name: app-test-view-clusterrolebinding
   namespace: default
 subjects:
 - kind: User
-  name: test-view
+  name: app-test-view
 roleRef:
   kind: Role
   name: view
@@ -64,10 +64,10 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: test-subscription-admin-clusterrolebinding
+  name: app-test-subscription-admin-clusterrolebinding
 subjects:
 - kind: User
-  name: test-subscription-admin
+  name: app-test-subscription-admin
 roleRef:
   kind: ClusterRole
   name: open-cluster-management:subscription-admin
