Fix cluster search undefined
Signed-off-by: Feng Xiang <fxiang@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -660,7 +660,7 @@ table.header.type.argo = Discovered
 table.header.type.appset = Argo CD ApplicationSet
 table.header.type.subscription.popup.label = Subscriptions
 table.header.type.subscription.desc = The subscription resource from Red Hat Advanced Cluster Management, which manages where Kubernetes resources will be deployed for multiple clusters from a single source.
-table.header.type.argo.desc = Discovered by the OpenShift GitOps - Argo CD operator installed in your clusters. Applications that share the same repository are grouped together in this view.
+table.header.type.argo.desc = Argo CD applications that are discovered by the OpenShift GitOps/Argo CD operator, grouped together because they share the same repository.
 table.header.type.appset.desc = A sub-project of Argo CD that adds multi-cluster support for Argo CD applications.
 table.plural.application = applications
 table.plural.subscription = subscriptions
