no dup key error
Signed-off-by: John Swanke <jswanke@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -227,6 +227,7 @@ creation.missing.clusterSelector.label = Cluster matching labels section missing
 creation.missing.clusterSelector.label.field= Label must be set
 creation.missing.clusterSelector.value = Cluster matching labels section missing label value.
 creation.missing.clusterSelector.value.field= Value must be set
+creation.duplicate.clusterSelector.label = Duplicated cluster selector label: '{0}'
 creation.missing.input = This value is required: '{0}'
 creation.input.must.not.change = This value cannot be modified. Restore the original value in the YAML view to continue: '{0}'
 creation.missing.timeWindow.days = Select at least one day to create a time window.
