--- a/Dockerfile.cypress
+++ b/Dockerfile.cypress
@@ -1,4 +1,4 @@
-FROM registry.ci.openshift.org/open-cluster-management/builder:go1.16-linux AS builder
+FROM registry.ci.openshift.org/stolostron/builder:go1.16-linux AS builder
 
 # FROM cypress/included:8.4.1 as production
 FROM quay.io/kcormier/cypress-included:latest as production
