Install in all namespaces
Signed-off-by: Kevin Cormier <kcormier@redhat.com>

--- a/tests/cypress/templates/ansible_yaml/ansible-operator-group.yaml
+++ b/tests/cypress/templates/ansible_yaml/ansible-operator-group.yaml
@@ -3,6 +3,4 @@ kind: OperatorGroup
 metadata:
   name: ansibleoperator-ssmqp
   namespace: app-ui-ansibleoperator
-spec:
-  targetNamespaces:
-  - app-ui-ansibleoperator
+spec: {}
