[release-2.3] Switch to GH org stolostron (#1405)
* Switch to GH org stolostron

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Update Ansible and Argo versions

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Fix ManagedClusterSetBinding API version for 2.3

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Revert Argo + Ansible version changes

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Revert "Revert Argo + Ansible version changes"

This reverts commit a6a1a5a2d7a1128c13aa16dbbd3619a6ed54ba10.

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Use cluster-scoped Ansible

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

* Install in all namespaces

Signed-off-by: Kevin Cormier <kcormier@redhat.com>

--- a/tests/cypress/templates/ansible_yaml/ansible-subscription.yaml
+++ b/tests/cypress/templates/ansible_yaml/ansible-subscription.yaml
@@ -4,9 +4,9 @@ metadata:
   name: awx-resource-operator
   namespace: app-ui-ansibleoperator
 spec:
-  channel: release-0.1
+  channel: early-access-cluster-scoped
   installPlanApproval: Automatic
-  name: awx-resource-operator   
+  name: ansible-automation-platform-operator
   source: redhat-operators  
   sourceNamespace: openshift-marketplace 
-  startingCSV: awx-resource-operator.v0.1.0
+  startingCSV: aap-operator.v2.0.1-0.1635283332
