--- a/tests/cypress/templates/ansible_yaml/ansible-subscription.yaml
+++ b/tests/cypress/templates/ansible_yaml/ansible-subscription.yaml
@@ -1,7 +1,7 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: awx-resource-operator
+  name: ansible-automation-platform-operator
   namespace: app-ui-ansibleoperator
 spec:
   channel: stable-2.1-cluster-scoped
